[gd_scene load_steps=3 format=3 uid="uid://dig5nmpr6foy5"]

[ext_resource type="Script" uid="uid://b85tld3pkybql" path="res://scripts/menu.gd" id="1_vjb58"]
[ext_resource type="Theme" uid="uid://by38quwx8jk54" path="res://themes/main.tres" id="2_vjb58"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_vjb58")

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme = ExtResource("2_vjb58")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vjb58")
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Volume"

[node name="HSlider" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
value = 0.2

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 22
text = "Resume"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 22
text = "Exit"

[node name="LevelsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="LevelsLabel" type="Label" parent="CenterContainer/VBoxContainer/LevelsContainer"]
layout_mode = 2
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 22
text = "Levels"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="CenterContainer/VBoxContainer/LevelsContainer"]
layout_mode = 2
theme = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 18

[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer/LevelsContainer/OptionButton" to="." method="_on_level_changed"]
